added contact info

--- a/index.html
+++ b/index.html
@@ -43,15 +43,11 @@
   </div>
 
   <div class="image">
-    <img src="galaxy-white.jpg" id="galaxy" style="width:400px;" />
+    <img src="images/galaxy-white.jpg" id="galaxy" style="width:400px;" />
   </div>
 
-  <!-- <div class="about">
-    <img src="galaxy-white.jpg" class="color_me_rad" />
-  </div> -->
-
   <!-- <div class="about_me" id="about_me">
-    <h1>About Me bbbbob</h1>
+    <h1>About Me</h1>
 
     <div class="about-me-400">
       <p>Hello, I'm Shawn, a developer and designer based in Cincinnati. I create great websites and Android apps. More specifically, a software engineer with a passion of learning. While I enjoy all aspects of my job, I thoroughly believe the most enjoyable
@@ -103,7 +99,7 @@
     </div>
   </div> -->
 
-  <!-- <div class="contact_me" id="contact_me">
+  <div class="contact_me" id="contact_me">
     <div class="iconss">
       <i class="fa fa-paper-plane-o fa-4x" aria-hidden="true"></i>
       <h2>ARE YOU INTERESTED?</h2>
@@ -112,9 +108,9 @@
       </p>
       <a href="mailto:mur7ay@me.com"><button type="button" class="button">Message Me</button></a>
     </div>
-  </div> -->
+  </div>
 
-  <!-- <div class="stalk_me">
+  <div class="stalk_me">
     <h1>Stalk Me</h1>
 
     <div class="fa_icons">
@@ -124,7 +120,7 @@
       <a href="https://www.linkedin.com/in/ssmurray" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true" id="stalk-icons"></i></a>
     </div>
 
-  </div> -->
+  </div>
 
 </body>
 
